landing page sin terminar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
     <link rel="shortcut icon" href="./img/star.jpg" type="image/x-icon">
 </head>
 <body>
-<div id="welcome img">
-    <img id="welcome" src="./img/Welcome.png" alt="" class="welcome">
+    <div id="nav">
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+
+    </div>
+<h1 id="Title">Tyler, The Creator</h1>
+<div id="Welcomeimg">
+    <img id="welcome" src="./img/Welcome.png" alt="">
+</div>
+    <div id="quote">
+        <section>“You clearly want to make something…so why not just make it”</section>
+    </div>
+
+<div id="Footer">
+    <footer class="letrafooter">Footer</footer>
 </div>
 </body>
 </html>
