--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyler, The Creator</title>
     <link rel="stylesheet" href="./css/Tallerdeconcreto.css">
+    <script src="./js/Tallerdeconcreto.js"></script>
     <link rel="shortcut icon" href="./img/star.jpg" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="nav">
@@ -26,6 +28,16 @@
     <div id="quote">
         <section>“You clearly want to make something…so why not just make it”</section>
     </div>
+<h2 id="updatetitle">WEBSIDE UPDATES!</h2>
+<div id="updatebox">
+    
+    <section>Hello! Here, I will be updating you on the elements I will be adding to the page every day, so try to stop by daily to see the latest additions ;)</section>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus odio eum nisi, quibusdam quos nobis. Doloremque, sequi mollitia, laborum, aut quis aspernatur aperiam accusamus commodi nisi ullam cum autem excepturi.</p>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem eos atque quae sunt dolorem rerum nobis possimus esse repellendus vitae blanditiis incidunt unde saepe ex, porro laudantium magnam obcaecati itaque.</p>
+    
+</div>
 
 <div id="Footer">
     <footer class="letrafooter">Footer</footer>
