arreglo barra de tareas

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="quote">
         <section>“You clearly want to make something…so why not just make it”</section>
     </div>
-<h2 id="updatetitle">WEBSIDE UPDATES!</h2>
+<h2 id="updatetitle">WEBSITE UPDATES!</h2>
 <div id="updatebox">
     
     <section>Hello! Here, I will be updating you on the elements I will be adding to the page every day, so try to stop by daily to see the latest additions ;)</section>
