--- a/index.html
+++ b/index.html
@@ -7,38 +7,67 @@
     <link rel="stylesheet" href="./css/Tallerdeconcreto.css">
     <script src="./js/Tallerdeconcreto.js"></script>
     <link rel="shortcut icon" href="./img/star.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div id="nav">
         <nav>
-                <a href="#inicio">Inicio</a>
-               <a href="#sobre-nosotros">Sobre Nosotros</a>
-                <a href="#servicios">Servicios</a>
-                <a href="#contacto">Contacto</a>
+                <a href="index.html" class="navtext">Inicio</a> <!-- target="_blank" rel="nooper noreferrer" para abrirlo en otra pestaña-->
+                <a href="biografia.html" class="navtext">Biografia</a>
+                <a href="disc.html" class="navtext">Discografia</a>
+                <a href="galery.html" class="navtext">Galeria</a>
         </nav>
-
-    </div>
 <h1 id="Title">Tyler, The Creator</h1>
 <div id="Welcomeimg">
     <img id="welcome" src="./img/Welcome.png" alt="">
 </div>
-    <div id="quote">
-        <section>“You clearly want to make something…so why not just make it”</section>
-    </div>
+<section id="quote">“You clearly want to make something…so why not just make it”</section>
+<img id="pixel" src="./img/pixel.png" alt="">
 <h2 id="updatetitle">WEBSITE UPDATES!</h2>
-<div id="updatebox">
+<section id="updatebox">
     
-    <section>Hello! Here, I will be updating you on the elements I will be adding to the page every day, so try to stop by daily to see the latest additions ;)</section>
+        <p>Hello! Here, I will be updating you on the elements I will be adding to the page every day, so try to stop by daily to see the latest additions ;)</p>
 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus odio eum nisi, quibusdam quos nobis. Doloremque, sequi mollitia, laborum, aut quis aspernatur aperiam accusamus commodi nisi ullam cum autem excepturi.</p>
+        <p>Se han actualizado el footer y la barra de navegacion.</p>
 
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem eos atque quae sunt dolorem rerum nobis possimus esse repellendus vitae blanditiis incidunt unde saepe ex, porro laudantium magnam obcaecati itaque.</p>
     
-</div>
+</section>
 
-<div id="Footer">
-    <footer class="letrafooter">Footer</footer>
-</div>
+
+<footer class="footer">
+        <div class="column">
+                <a href="index.html" >
+                <h3>Inicio</h3></a>
+                <a href="biografia.html" >
+                <h3>Biografia</h3></a>
+                <a href="disc.html" >
+                <h3>Discografia</h3></a>
+                <a href="galery.html" >
+                <h3>Galeria</h3></a>
+        </div>
+
+        <div class="column">
+                <h3>Acerca de</h3>
+                <p>Sobre nosotros</p>
+                <p>Contacto</p>
+                <p>Donde encontrarnos</p>
+        </div>
+
+        <div class="column">
+                <p>Privacidad</p>
+                <p>Uso de cookies</p>
+                <h3>Siguenos</h3>
+                <a href="" target="_blank" rel="nooper noreferrer">
+                <i class="fab fa-instagram"></i></a>
+                <a href="" target="_blank" rel="nooper noreferrer">
+                <i class="fab fa-twitter"></i></a>
+                <a href="" target="_blank" rel="nooper noreferrer">
+                <i class="fab fa-tiktok"></i></a>
+
+        </div>
+
+</footer>
+
 </body>
 </html>
