--- a/biografia.html
+++ b/biografia.html
@@ -14,16 +14,15 @@
         <div id="boton">
         <button id="btn_open">MENU</button>
         </div>
-        <a class="titulo">Tyler, the Creator</a>
+        <a href="index.html" class="titulo">Tyler, the Creator</a>
 </header>
 
 <nav class="menu" id="menu">
-        <li><a class="nav_options" href="#">Inicio</a>
-        <li><a class="nav_options" href="#">Biografia</a></li>
-        <li><a class="nav_options" href="#">Discografia</a></li>
-        <li><a class="nav_options" href="#">Galeria</a></li>
-        </nav>
-    
+    <li><a class="nav_options" href="index.html">Inicio</a>
+    <li><a class="nav_options" href="biografia.html">Biografia</a></li>
+    <li><a class="nav_options" href="disc.html">Discografia</a></li>
+    <li><a class="nav_options" href="galery.html">Galeria</a></li>
+</nav>
     <!-- primeros años -->
     <section>
         <h3>Infancia</h3>
