--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 <body id="body">
 <header>
         <div id="boton">
-        <button id="btn_open">MENU</button>
+        <button id="btn_open" href="index.html">MENU</button>
         </div>
-        <a class="titulo">Tyler, the Creator</a>
+        <a class="titulo" target="_blank">Tyler, the Creator</a>
 </header>
 
 <nav class="menu" id="menu">
-        <li><a class="nav_options" href="#">Inicio</a>
-        <li><a class="nav_options" href="#">Biografia</a></li>
-        <li><a class="nav_options" href="#">Discografia</a></li>
-        <li><a class="nav_options" href="#">Galeria</a></li>
-        </nav>
+        <li><a class="nav_options" href="index.html">Inicio</a>
+        <li><a class="nav_options" href="biografia.html">Biografia</a></li>
+        <li><a class="nav_options" href="disc.html">Discografia</a></li>
+        <li><a class="nav_options" href="galery.html">Galeria</a></li>
 </nav>
 <div id="Welcomeimg">
     <img id="welcome" src="./img/Welcome.png" alt="">
@@ -43,13 +42,13 @@
 
 <footer class="footer">
         <div class="column">
-                <a href="index.html" >
+                <a target="_blank" href="index.html" >
                 <h3>Inicio</h3></a>
-                <a href="biografia.html" >
+                <a target="_blank" href="biografia.html" >
                 <h3>Biografia</h3></a>
-                <a href="disc.html" >
+                <a target="_blank" href="disc.html" >
                 <h3>Discografia</h3></a>
-                <a href="galery.html" >
+                <a target="_blank" href="galery.html" >
                 <h3>Galeria</h3></a>
         </div>
 
