--- a/biografia.html
+++ b/biografia.html
@@ -24,34 +24,46 @@
     <li><a class="nav_options" href="galery.html">Galeria</a></li>
 </nav>
     <!-- primeros años -->
-    <section>
+    <section class="texto">
         <h3>Infancia</h3>
-        <p>Tyler Gregory Okonma nació el 6 de marzo de 1991 en Ladera Heights, California. Creció con una pasión por la música y la creatividad, aprendiendo a tocar el piano a una edad temprana y mostrando un interés notable por la producción musical.</p>
+        <div id="childhood">
+        <p>Tyler Gregory Okonma nacio el 6 de marzo de 1991 en Ladera Heights, California. Crecio con una pasion por la musica y la creatividad, aprendiendo a tocar el piano a una edad temprana y mostrando un interes notable por la produccion musical.
 
-           <p> Su infancia estuvo marcada por su habilidad para crear música en su computadora, experimentando con sonidos y ritmos que sentaron las bases de su carrera futura en la industria musical.</p>
+        Su infancia estuvo marcada por su habilidad para crear musica en su computadora, experimentando con sonidos y ritmos que sentaron las bases de su carrera futura en la industria musical.</p>
+        <img src="./img/child.jpg" id="child">
+    </div>
     </section>
     <!-- Carrera of/solista -->
-    <section>
+    <section class="texto">
         <h3>Carrera</h3>
         <h4>OF</h4>
-        <p>En 2007, Tyler, junto con un grupo de amigos, fundó el colectivo creativo Odd Future Wolf Gang Kill Them All (OFWGKTA o simplemente Odd Future). Este colectivo se convirtió en una plataforma para la música, el arte, la moda y la cultura juvenil alternativa.</p>
+        <div class="OF">
+        <img id="OF" src="./img/of.jpg">
+    </div>
+        <p>En 2007, Tyler, junto con un grupo de amigos, fundo el colectivo creativo Odd Future Wolf Gang Kill Them All (OFWGKTA o simplemente Odd Future). Este colectivo se convirtio en una plataforma para la musica, el arte, la moda y la cultura juvenil alternativa.</p>
 
-        <p>Tyler emergió como una figura destacada dentro de Odd Future, no solo por su talento musical sino también por su habilidad para dirigir videos musicales y su enfoque disruptivo en la producción.</p>
+        <p>Tyler emergio como una figura destacada dentro de Odd Future, no solo por su talento musical sino tambien por su habilidad para dirigir videos musicales y su enfoque disruptivo en la produccion.</p>
+        
+        <section>
         <h4>Carrera como solista</h4>
-        <p>El debut en solitario de Tyler, The Creator con su álbum "Goblin" en 2011 marcó un punto crucial en su carrera. Este álbum, caracterizado por sus letras provocativas y un sonido oscuro y experimental, generó tanto controversia como admiración en la escena musical.</p>
-        <p>Sin embargo, fue con el lanzamiento de "Wolf" en 2013 cuando Tyler comenzó a recibir una mayor aclamación crítica y reconocimiento por su madurez artística. Este álbum exhibió una narrativa más cohesiva, explorando temas personales y presentando una evolución en su producción musical.</p>
-        <p>"Cherry Bomb", lanzado en 2015, representó un giro audaz en su sonido, combinando elementos de jazz, soul y electrónica. Aunque polarizó a algunos fanáticos y críticos, fue un testimonio del deseo de Tyler por desafiar las expectativas y explorar nuevas direcciones musicales.</p>
-        <p>El álbum "Flower Boy" en 2017 se convirtió en un hito en su carrera. Este proyecto reveló una faceta más íntima y reflexiva de Tyler, explorando temas de identidad, amor y crecimiento personal. Con una producción más pulida y colaboraciones destacadas, como las de Frank Ocean y Pharrell Williams, "Flower Boy" recibió elogios generalizados y una nominación al Grammy por Mejor Álbum de Rap.</p>
-        <p>La maduración artística de Tyler continuó con "Igor", lanzado en 2019. Este álbum presentó una narrativa conceptual sobre un amor no correspondido, mostrando una experimentación aún más profunda en la producción y la composición. "Igor" le otorgó a Tyler su primer premio Grammy como Mejor Álbum de Rap.</p>
-        <p>El ascenso de Tyler, The Creator como solista alcanzó un nuevo hito con el lanzamiento de "Call Me If You Get Lost" en 2021. Este álbum se convirtió en otro capítulo significativo en la evolución artística del rapero y productor.</p>
+        <p>El debut en solitario de Tyler, The Creator con su album "Goblin" en 2011 marco un punto crucial en su carrera. Este album, caracterizado por sus letras provocativas y un sonido oscuro y experimental, genero tanto controversia como admiracion en la escena musical.</p>
+        <p>Sin embargo, fue con el lanzamiento de "Wolf" en 2013 cuando Tyler comenzo a recibir una mayor aclamacion critica y reconocimiento por su madurez artistica. Este album exhibio una narrativa mas cohesiva, explorando temas personales y presentando una evolucion en su produccion musical.</p>
+        <p>"Cherry Bomb", lanzado en 2015, representó un giro audaz en su sonido, combinando elementos de jazz, soul y electrónica. Aunque polarizo a algunos fanaticos y criticos, fue un testimonio del deseo de Tyler por desafiar las expectativas y explorar nuevas direcciones musicales.</p>
+        <p>El álbum "Flower Boy" en 2017 se convirtio en un hito en su carrera. Este proyecto reveló una faceta mas intima y reflexiva de Tyler, explorando temas de identidad, amor y crecimiento personal. Con una produccion más pulida y colaboraciones destacadas, como las de Frank Ocean y Pharrell Williams, "Flower Boy" recibio elogios generalizados y una nominacion al Grammy por Mejor Album de Rap.</p>
+        <p>La maduracion artistica de Tyler continuo con "Igor", lanzado en 2019. Este album presento una narrativa conceptual sobre un amor no correspondido, mostrando una experimentacion aun mas profunda en la produccion y la composicion. "Igor" le otorgo a Tyler su primer premio Grammy como Mejor Album de Rap.</p>
+        <p>El ascenso de Tyler, The Creator como solista alcanzo un nuevo hito con el lanzamiento de "Call Me If You Get Lost" en 2021. Este album se convirtio en otro capitulo significativo en la evolucion artistica del rapero y productor.</p>
         <h4>Premios</h4>
-        <p>A lo largo de su carrera, Tyler, The Creator ha sido reconocido por su innovación y contribuciones a la música, la moda y el entretenimiento, recibiendo múltiples premios y nominaciones que destacan su impacto en la industria:</p>
-        <p>Ha sido nominado en varias ocasiones a los premios Grammy, con su álbum "Flower Boy" obteniendo una nominación al Mejor Álbum de Rap en 2018 y "Igor" ganando el premio al Mejor Álbum de Rap en 2020, consolidando su versatilidad y reconocimiento dentro del género.</p>
+        <p>A lo largo de su carrera, Tyler, The Creator ha sido reconocido por su innovacion y contribuciones a la musica, la moda y el entretenimiento, recibiendo multiples premios y nominaciones que destacan su impacto en la industria:</p>
+        <p>Ha sido nominado en varias ocasiones a los premios Grammy, con su album "Flower Boy" obteniendo una nominacion al Mejor Album de Rap en 2018 y "Igor" ganando el premio al Mejor Album de Rap en 2020, consolidando su versatilidad y reconocimiento dentro del genero.</p>
+        </section>
         <h3>Moda</h3>
-        <p>La influencia de Tyler, The Creator se extiende más allá de la música, siendo un ícono de estilo y creatividad en el mundo de la moda. A través de su marca de ropa "Golf Wang", ha dejado una marca distintiva en la escena de la moda urbana contemporánea.</p>
-        <p>Golf Wang" no es solo una marca de ropa, sino una expresión de la visión artística y el estilo personal de Tyler. Sus colecciones reflejan su estética única, caracterizadas por colores vibrantes, estampados llamativos y diseños eclécticos que desafían las convenciones tradicionales de la moda.</p>
-        <p>Además de sus propias creaciones, Tyler ha colaborado con marcas reconocidas, llevando su creatividad a proyectos conjuntos que han resonado en la industria de la moda. Su capacidad para fusionar la música, la moda y el arte ha generado un impacto significativo, inspirando a seguidores y diseñadores emergentes por igual.</p>
-        <p>La visión vanguardista de Tyler en la moda lo ha posicionado como un referente de estilo, captando la atención de la industria y consolidando su posición como un creador multifacético y visionario en el mundo del entretenimiento.</p>
+        <p>La influencia de Tyler, The Creator se extiende mas alla de la musica, siendo un icono de estilo y creatividad en el mundo de la moda. A traves de su marca de ropa "Golf Wang", ha dejado una marca distintiva en la escena de la moda urbana contemporanea.</p>
+        <div class="moda">
+            <img src="./img/golf.png" id="golf">
+        </div>
+        <p>Golf Wang no es solo una marca de ropa, sino una expresión de la vision artística y el estilo personal de Tyler. Sus colecciones reflejan su estetica unica, caracterizadas por colores vibrantes, estampados llamativos y diseños eclecticos que desafian las convenciones tradicionales de la moda.</p>
+        <p>Ademas de sus propias creaciones, Tyler ha colaborado con marcas reconocidas, llevando su creatividad a proyectos conjuntos que han resonado en la industria de la moda. Su capacidad para fusionar la musica, la moda y el arte ha generado un impacto significativo, inspirando a seguidores y diseñadores emergentes por igual.</p>
+        <p>La vision vanguardista de Tyler en la moda lo ha posicionado como un referente de estilo, captando la atencion de la industria y consolidando su posicion como un creador multifacetico y visionario en el mundo del entretenimiento.</p>
     </section>
 
     <footer class="footer">
