--- a/disc.html
+++ b/disc.html
@@ -23,41 +23,163 @@
     <li><a class="nav_options" href="disc.html">Discografia</a></li>
     <li><a class="nav_options" href="galery.html">Galeria</a></li>
 </nav>
-<section>
+<section class="texto">
 <h3>Bastard</h3>
+<div class="album" id="bastard">
+    <img class="cover" src="./img/bastard.png">
+    <ol>
+        <li>Bastard</li>
+        <li>Seven</li>
+        <li>Odd Toddlers (feat. Casey Veggies)</li>
+        <li>French!</li>
+        <li>Blow</li>
+        <li>Pigs Fly (feat. Domo Genesis)</li>
+        <li>Parade</li>
+        <li>Slow It Down (feat. Hodgy Beats)</li>
+        <li>AssMilk (feat. Earl Sweatshirt)</li>
+        <li>VCR / Wheels</li>
+        <li>Session (feat. Hodgy Beats & Mike G)</li>
+        <li>Sarah</li>
+        <li>Jack and the Beanstalk</li>
+        <li>Tina (feat. Jasper Dolphin & Taco)</li>
+        <li>Inglorious</li>
+      </ol>
+</div>
 <p>El álbum "Bastard" sirve como un portal a la mente inquieta y creativa de un joven Tyler, The Creator. Desde su lanzamiento en 2009, este proyecto no solo estableció a Tyler como un talentoso rapero y productor, sino que también presentó una narrativa cruda y provocativa que lo diferenciaba en la escena musical.</p>
 <p>El álbum comienza con "Bastard", una pista introductoria que establece el tono para el resto del proyecto. Aquí, Tyler se sumerge en sus problemas personales, explorando su relación con su padre ausente y abordando sentimientos de angustia y aislamiento.</p>
 <p>A lo largo de las 13 pistas que componen el álbum, Tyler se sumerge en temas oscuros y controvertidos. "Seven" presenta una confesión de sus pensamientos más íntimos y sus luchas internas, mientras que "Odd Toddlers" muestra su habilidad para alternar entre letras jocosas y reflexivas.</p>
 <p>En "French!", Tyler ofrece una mirada audaz y desenfadada sobre su descontento con la fama incipiente y las dinámicas sociales. "Blow" y "Pigs Fly" son canciones que resuenan con su frustración y resentimiento hacia la sociedad, mientras que "Session" revela una vulnerabilidad cruda a través de su narrativa introspectiva.</p>
 <p>El álbum culmina con "Inglorious", una pista que muestra su habilidad para reflexionar sobre su camino hasta el momento presente, marcando un cierre introspectivo para este proyecto inicial.</p>
 </section>
-<section>
+<section class="texto">
     <h3>Goblin</h3>
+    <div class="album" id="goblin">
+        <img class="cover" src="./img/goblin.jpg">
+        <ol start="1">
+            <li>Bastard</li>
+            <li>Seven</li>
+            <li>Odd Toddlers (feat. Casey Veggies)</li>
+            <li>French!</li>
+            <li>Blow</li>
+            <li>Pigs Fly (feat. Domo Genesis)</li>
+            <li>Parade</li>
+            <li>Slow It Down (feat. Hodgy Beats)</li>
+            <li>AssMilk (feat. Earl Sweatshirt)</li>
+            <li>VCR / Wheels</li>
+            <li>Session (feat. Hodgy Beats & Mike G)</li>
+            <li>Sarah</li>
+            <li>Jack and the Beanstalk</li>
+            <li>Tina (feat. Jasper Dolphin & Taco)</li>
+            <li>Inglorious</li>
+            <li>Goblin</li>
+            <li>Yonkers</li>
+          </ol>
+    </div>
 <p>"Goblin", el segundo álbum de estudio de Tyler, The Creator, lanzado en 2011, marca una continuación audaz y provocativa de la narrativa introspectiva y cruda que caracteriza su estilo. Este álbum no solo consolidó su presencia en la escena del hip hop, sino que también profundizó en los temas oscuros y polémicos que marcaron su identidad artística.</p>
 <p>El álbum comienza con "Goblin", una pista que revela un diálogo interno entre Tyler y su alter ego, Wolf Haley, sumergiéndose en sus pensamientos más profundos y complejos. Este tema establece el tono para el álbum, mostrando la dualidad de su personalidad y el conflicto entre sus demonios internos y su deseo de éxito.</p>
 <p>Canciones como "Yonkers" capturaron la atención del público y la crítica, con su producción inquietante y letras impactantes que desafiaban las convenciones sociales y exploraban temas de violencia y autoimagen.</p>
 <p>En "She", Tyler presenta una narrativa sobre una relación obsesiva y autodestructiva, mientras que "Nightmare" y "Tron Cat" son pistas que revelan su oscuro sentido del humor y su habilidad para crear imágenes gráficas con sus letras.</p>
 </section>
-<section>
+<section class="texto">
     <h3>WOLF</h3>
+        <div class="album" id="wolf">
+            <img class="cover" src="./img/wolf.jpg">
+            <ol start="1">
+                <li>Wolf</li>
+                <li>Jamba (feat. Hodgy Beats)</li>
+                <li>Cowboy</li>
+                <li>Awkward</li>
+                <li>Domo23</li>
+                <li>Answer</li>
+                <li>Slater (feat. Frank Ocean)</li>
+                <li>48</li>
+                <li>Colossus</li>
+                <li>PartyIsntOver / Campfire / Bimmer (feat. Laetitia Sadier & Frank Ocean)</li>
+                <li>IFHY (feat. Pharrell Williams)</li>
+                <li>Pigs</li>
+                <li>Parking Lot (feat. Casey Veggies & Mike G)</li>
+                <li>Rusty (feat. Domo Genesis & Earl Sweatshirt)</li>
+                <li>Trashwang (feat. Na'kel, Jasper Dolphin, Lucas, L-Boy, Taco, Left Brain & Lee Spielman)</li>
+                <li>Treehome95 (feat. Coco O. & Erykah Badu)</li>
+                <li>Tamale</li>
+                <li>Lone</li>
+              </ol>
+        </div>
     <p>"Wolf", lanzado en 2013, representa un punto de inflexión en la carrera de Tyler, The Creator. Este álbum no solo marca una progresión en su madurez artística, sino que también revela una narrativa más elaborada y una exploración más profunda de sus emociones y experiencias.</p>
     <p>El álbum comienza con "Wolf", una introducción instrumental que establece un ambiente misterioso y reflexivo, dando paso a pistas como "Jamba" y "Cowboy", que destacan por su producción enérgica y letras que reflejan la autoconfianza y el crecimiento personal.</p>
     <p>En "Answer", Tyler se sumerge en temas personales, explorando su relación con su padre y sus luchas internas. "Slater" y "48" ofrecen una mirada a la dinámica de sus relaciones y amistades, mientras que "Colossus" y "IFHY" presentan una narrativa sobre el amor y la complejidad de las emociones humanas.</p>
 </section>
-<section>
+<section class="texto">
     <h3>Flower Boy</h3>
+    <div class="album" id="flowerboy">
+        <img class="cover" src="./img/flowerboy.jpg">
+        <ol start="1">
+            <li>Foreword</li>
+            <li>Where This Flower Blooms (feat. Frank Ocean)</li>
+            <li>Sometimes...</li>
+            <li>See You Again (feat. Kali Uchis)</li>
+            <li>Who Dat Boy (feat. A$AP Rocky)</li>
+            <li>Pothole (feat. Jaden Smith)</li>
+            <li>Garden Shed (feat. Estelle)</li>
+            <li>Boredom (feat. Rex Orange County & Anna of the North)</li>
+            <li>I Ain't Got Time!</li>
+            <li>911 / Mr. Lonely (feat. Frank Ocean & Steve Lacy)</li>
+            <li>Droppin' Seeds (feat. Lil Wayne)</li>
+            <li>November</li>
+            <li>Glitter</li>
+            <li>Enjoy Right Now, Today</li>
+        </ol>
+    </div>
     <p>"Flower Boy", lanzado en 2017, marca un cambio significativo en la narrativa y el estilo musical de Tyler, The Creator. Este álbum es una exploración profunda de su yo interior, revelando vulnerabilidad, reflexión y crecimiento personal.</p>
     <p>El álbum comienza con "Foreword", estableciendo un tono introspectivo que permea todo el proyecto. "Where This Flower Blooms" y "Sometimes..." son pistas que reflejan una sensibilidad más suave y melódica, mostrando la evolución en su sonido y narrativa.</p>
     <p>"See You Again" y "Boredom" presentan un contraste entre la búsqueda de la conexión emocional y el sentimiento de aislamiento, mientras que "911 / Mr. Lonely" muestra una dualidad entre la fama y la soledad, explorando la complejidad de la vida bajo los reflectores.</p>
 </section>
-<section>
+<section class="texto">
     <h3>IGOR</h3>
+    <div class="album" id="igor">
+        <img class="cover" src="./img/img4.jpg">
+        <ol start="1">
+            <li>IGOR'S THEME</li>
+            <li>EARFQUAKE</li>
+            <li>I THINK</li>
+            <li>EXACTLY WHAT YOU RUN FROM YOU END UP CHASING</li>
+            <li>RUNNING OUT OF TIME</li>
+            <li>NEW MAGIC WAND</li>
+            <li>A BOY IS A GUN*</li>
+            <li>PUPPET</li>
+            <li>WHAT'S GOOD</li>
+            <li>GONE, GONE / THANK YOU</li>
+            <li>I DON'T LOVE YOU ANYMORE</li>
+            <li>ARE WE STILL FRIENDS?</li>
+        </ol>
+    </div>
     <p>"IGOR", lanzado en 2019, representa una ruptura audaz con las convenciones musicales establecidas por Tyler, The Creator. Este álbum es una exploración innovadora y emocional de temas como el amor no correspondido y el autodescubrimiento, presentado a través de una narrativa sonora única.</p>
     <p>El álbum comienza con "IGOR'S THEME", una introducción que establece el tono para el viaje emocional que se avecina. A lo largo de las pistas, como "EARFQUAKE" y "I THINK", Tyler nos lleva a través de un laberinto de emociones, revelando la complejidad del amor y la identidad.</p>
     <p>En "A BOY IS A GUN*" y "PUPPET", Tyler explora la dinámica emocional de estar enamorado y sentirse atrapado en una relación. Estas canciones muestran una vulnerabilidad sin precedentes, profundizando en los altibajos emocionales de un amor no correspondido.</p>
 </section>
-<section>
+<section class="texto">
     <h3>Call me if you get lost</h3>
+    <div class="album" id="cmiygl">
+        <img class="cover" src="./img/cmiygl.jpg">
+        <ol start="1">
+            <li>SIR BAUDELAIRE</li>
+            <li>CORSO</li>
+            <li>LEMONHEAD (feat. 42 Dugg)</li>
+            <li>WUSYANAME (feat. Ty Dolla $ign & YoungBoy Never Broke Again)</li>
+            <li>LUMBERJACK</li>
+            <li>HOT WIND BLOWS (feat. Lil Wayne)</li>
+            <li>MASSA</li>
+            <li>RUNITUP (feat. Teezo Touchdown)</li>
+            <li>MANIFESTO (feat. Domo Genesis)</li>
+            <li>SWEET / I THOUGHT YOU WANTED TO DANCE (feat. Brent Faiyaz & Fana Hues)</li>
+            <li>MOMMA TALK</li>
+            <li>RISE! (feat. DAISY WORLD)</li>
+            <li>BLESSED</li>
+            <li>JUGGERNAUT (feat. Lil Uzi Vert & Pharrell Williams)</li>
+            <li>WILSHIRE</li>
+            <li>SAFARI</li>
+        </ol>
+    </div>
     <p>"Call Me If You Get Lost" marca una evolución continua en la narrativa y el sonido de Tyler, The Creator. Lanzado en 2021, este álbum presenta una exploración madura y versátil de su arte, fusionando elementos de rap clásico con una paleta sonora contemporánea y rica en matices.</p>
     <p>El álbum comienza con "SIR BAUDELAIRE", una introducción elegante que establece el tono para el resto del proyecto. A lo largo de las pistas como "LEMONHEAD" y "WUSYANAME", Tyler muestra su versatilidad lírica y musical, saltando entre ritmos y estilos con una maestría única.</p>
     <p>En "LUMBERJACK", Tyler exhibe su confianza y habilidad para dominar un ritmo más agresivo, mientras que "MASSA" y "RISE!" presentan letras reflexivas y profundas que exploran temas personales y su viaje hacia el éxito.</p>
