--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
     
         <p>Hello! Here, I will be updating you on the elements I will be adding to the page every day, so try to stop by daily to see the latest additions ;)</p>
 
-        <p>Se han actualizado el footer y la barra de navegacion.</p>
-
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem eos atque quae sunt dolorem rerum nobis possimus esse repellendus vitae blanditiis incidunt unde saepe ex, porro laudantium magnam obcaecati itaque.</p>
-    
+        <p>Se ha finalizado la base de la pagina web!</p>
+  
 </section>
 
 
