--- a/disc.html
+++ b/disc.html
@@ -56,23 +56,23 @@
     <div class="album" id="goblin">
         <img class="cover" src="./img/goblin.jpg">
         <ol start="1">
-            <li>Bastard</li>
-            <li>Seven</li>
-            <li>Odd Toddlers (feat. Casey Veggies)</li>
-            <li>French!</li>
-            <li>Blow</li>
-            <li>Pigs Fly (feat. Domo Genesis)</li>
-            <li>Parade</li>
-            <li>Slow It Down (feat. Hodgy Beats)</li>
-            <li>AssMilk (feat. Earl Sweatshirt)</li>
-            <li>VCR / Wheels</li>
-            <li>Session (feat. Hodgy Beats & Mike G)</li>
-            <li>Sarah</li>
-            <li>Jack and the Beanstalk</li>
-            <li>Tina (feat. Jasper Dolphin & Taco)</li>
-            <li>Inglorious</li>
             <li>Goblin</li>
             <li>Yonkers</li>
+            <li>Radicals</li>
+            <li>She (feat. Frank Ocean)</li>
+            <li>Transylvania</li>
+            <li>Nightmare</li>
+            <li>Tron Cat</li>
+            <li>Her</li>
+            <li>Sandwitches (feat. Hodgy Beats)</li>
+            <li>Fish</li>
+            <li>Analog (feat. Hodgy Beats)</li>
+            <li>Bitch Suck Dick (feat. Jasper Dolphin & Taco)</li>
+            <li>Window (feat. Domo Genesis, Mike G & Hodgy Beats)</li>
+            <li>AU79</li>
+            <li>Golden</li>
+            <li>Burger (feat. Hodgy Beats)</li>
+            <li>Steak Sauce</li>
           </ol>
     </div>
 <p>"Goblin", el segundo álbum de estudio de Tyler, The Creator, lanzado en 2011, marca una continuación audaz y provocativa de la narrativa introspectiva y cruda que caracteriza su estilo. Este álbum no solo consolidó su presencia en la escena del hip hop, sino que también profundizó en los temas oscuros y polémicos que marcaron su identidad artística.</p>
